<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.grupo10.jatrikandroid.LoginActivity" 
    android:background="@drawable/fondo">
    

    <!-- Login progress -->

   

    <RelativeLayout 
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingBottom="80dp"
	    android:paddingLeft="80dp"
	    android:paddingRight="80dp"
	    android:paddingTop="80dp">
	    
         <ProgressBar
	        android:id="@+id/login_progress"
	        style="?android:attr/progressBarStyleLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:layout_marginBottom="8dp"
	        android:visibility="gone" />

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
			android:background="@drawable/linearlayout_bg"
			android:padding="10dp">

            
            <EditText
                android:id="@+id/EditText_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_top_bg"
                android:drawableLeft="@drawable/user"
                android:padding="10dp"
                style="@style/DefaultEditText"
                android:hint="@string/edit_user"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/EditText_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
				android:background="@drawable/edittext_bottom_bg"
				android:drawableLeft="@drawable/password"
				android:padding="10dp"
				style="@style/DefaultEditText"
				android:hint="@string/edit_psw"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
            
            <Button
                android:id="@+id/ButtonLogin"
                android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:layout_margin="4dp"
				android:text="@string/button_login"
				style="@style/DefaultButtonText"
				android:background="@drawable/button_default_bg"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
